bug fixes. most recently pressed pending order gets drawn first